--- a/todo-app/todo-backend/docker-compose.dev.yaml
+++ b/todo-app/todo-backend/docker-compose.dev.yaml
@@ -18,4 +18,4 @@ services:
       - 6379:6379
     command: ['redis-server', '--appendonly', 'yes']
     volumes:
-      - ./redis_data:/data/redis
+      - ./redis_data:/data
