--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,15 +1,17 @@
-FROM node:16 AS build-stage
-
+FROM node:16 AS base
 WORKDIR /usr/src/app
-
 COPY . .
 
-ENV REACT_APP_BACKEND_URL http://localhost:3000
-
+FROM base as test
+ENV CI true
 RUN npm ci
+RUN [ "npm", "run", "test" ]
 
+FROM base as build
+ENV REACT_APP_BACKEND_URL http://localhost:3000
+COPY --from=test /usr/src/app /usr/src/app
+RUN npm ci --production
 RUN npm run build
 
 FROM nginx:1.20-alpine
-
-COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /usr/src/app/build /usr/share/nginx/html
