--- a/todo-app/todo-backend/docker-compose.dev.yaml
+++ b/todo-app/todo-backend/docker-compose.dev.yaml
@@ -12,10 +12,27 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - ./mongo_data:/data/db
+    container_name: mongo
   redis:
     image: redis
     ports:
       - 6379:6379
-    command: ['redis-server', '--appendonly', 'yes']
+    command: [ 'redis-server', '--appendonly', 'yes' ]
     volumes:
       - ./redis_data:/data
+    container_name: redis
+  server:
+    image: todo-back-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3000:3000
+    container_name: todo-back-dev
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+  debug_helper:
+    image: busybox
